2A/05_Projet_GL/src/test/deca/context/valid/index/03_decl_classe_methode.deca


// 

class A  {
    int a ;
    float b ;

    int getA() {
        return a ;
    }

    float getB() {
        return b ; 
    }
}